Update csv file

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -1,52 +1,94 @@
-".htaccess Content",".htaccess Content"
-".htaccess Editor [Beta]",".htaccess Editor [Beta]"
-"  <a href="http://www.robotsgenerator.com/?utm_source=mageplaza.com&utm_medium=seo-extension&utm_campaign=configuration" target="_blank">Robots.txt generator</a> ","  <a href="http://www.robotsgenerator.com/?utm_source=mageplaza.com&utm_medium=seo-extension&utm_campaign=configuration" target="_blank">Robots.txt generator</a> "
-" Default URL: http://your-domain.com/seo/sitemap/ "," Default URL: http://your-domain.com/seo/sitemap/ "
-" Download <a href="https://github.com/mageplaza/magento-htaccess-extension/blob/master/.htaccess" target="_blank">.htaccess file</a> "," Download <a href="https://github.com/mageplaza/magento-htaccess-extension/blob/master/.htaccess" target="_blank">.htaccess file</a> "
+"-","-"
+".","."
+" Default URL: http://your-domain.com/seo/sitemap/ ; See <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000155072-html-sitemap" target="_blank">this article</a> "," Default URL: http://your-domain.com/seo/sitemap/ ; See <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000155072-html-sitemap" target="_blank">this article</a> "
+" Default is 100 "," Default is 100 "
 " E.g: <b>com.example</b>"," E.g: <b>com.example</b>"
-" Learn more <a href="http://ogp.me/">Open Graph</a> "," Learn more <a href="http://ogp.me/">Open Graph</a> "
-" Learn more <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000122353-sitelinks-search-box" target="_blank">Sitelinks Search Box</a> "," Learn more <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000122353-sitelinks-search-box" target="_blank">Sitelinks Search Box</a> "
-" Learn more <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000122357">Include Your Site Name in Search Results</a> "," Learn more <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000122357">Include Your Site Name in Search Results</a> "
-" Learn more <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000122358">Breadcrumbs</a> "," Learn more <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000122358">Breadcrumbs</a> "
-" Learn more <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000122360">Customizing Your Knowledge Graph</a> "," Learn more <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000122360">Customizing Your Knowledge Graph</a> "
-" Learn more <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000122361--rich-snippets/">Rich Snippets</a> "," Learn more <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000122361--rich-snippets/">Rich Snippets</a> "
-" Learn more <a href="https://support.google.com/webmasters/answer/189077?hl=en">here</a>"," Learn more <a href="https://support.google.com/webmasters/answer/189077?hl=en">here</a>"
-" Line by line. <br> Learn more <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000122359">Social Profile Links</a> "," Line by line. <br> Learn more <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000122359">Social Profile Links</a> "
-" Your account: twitter.com/Mark, you should fill: <strong>Mark</strong> "," Your account: twitter.com/Mark, you should fill: <strong>Mark</strong> "
 " "," "
+"Enter verification code, it will be added into <head> tag","Enter verification code, it will be added into <head> tag"
+"Google will only show verified profiles. <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000122359-social-profile-links">Learn more</a>","Google will only show verified profiles. <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000122359-social-profile-links">Learn more</a>"
+"Logo URL, e.g: https://www.mageplaza.com/logo.jpg","Logo URL, e.g: https://www.mageplaza.com/logo.jpg"
+"",""
 "Add Canonical URL Meta","Add Canonical URL Meta"
-"Add Link Rel="alternate"","Add Link Rel="alternate""
 "Add Nofollow meta in Product Gallery","Add Nofollow meta in Product Gallery"
 "Add Nofollow meta in Search Result","Add Nofollow meta in Search Result"
-"Add Open Graph and Twitter Card","Add Open Graph and Twitter Card"
+"Add Open Graph meta tags","Add Open Graph meta tags"
 "Add Sitemap Link to Footer","Add Sitemap Link to Footer"
+"Add Twitter Card Meta Tags","Add Twitter Card Meta Tags"
+"Alternate Name","Alternate Name"
 "Android App Code","Android App Code"
-"Auto Setup SEO Basic","Auto Setup SEO Basic"
-"Auto set page title, meta description","Auto set page title, meta description"
+"Avoid duplicate content.","Avoid duplicate content."
+"Bing Webmaster Tools","Bing Webmaster Tools"
+"Breadcrumbs","Breadcrumbs"
+"Business Logo","Business Logo"
+"Business Name","Business Name"
+"Business Phone Number","Business Phone Number"
+"Business information","Business information"
+"Canonical points to https","Canonical points to https"
 "Categories","Categories"
-"Enable Breadcrumbs","Enable Breadcrumbs"
-"Enable Categories","Enable Categories"
+"Dashboard","Dashboard"
+"Disable URL parameter in canonical URL","Disable URL parameter in canonical URL"
+"Duplicate Content","Duplicate Content"
+"Enable Breadcrumbs Rich Snippet","Enable Breadcrumbs Rich Snippet"
+"Enable Business information","Enable Business information"
+"Enable Categories Sitemap","Enable Categories Sitemap"
+"Enable For Category","Enable For Category"
+"Enable For Pages","Enable For Pages"
+"Enable For Product","Enable For Product"
 "Enable HTML Sitemap","Enable HTML Sitemap"
+"Enable Hreflang Url","Enable Hreflang Url"
+"Enable Next/Prev tag","Enable Next/Prev tag"
 "Enable Organization Information","Enable Organization Information"
+"Enable Pages Sitemap","Enable Pages Sitemap"
+"Enable Product Structured Data","Enable Product Structured Data"
+"Enable Products Sitemap","Enable Products Sitemap"
 "Enable Rich Snippets","Enable Rich Snippets"
 "Enable Sitelinks Search Box","Enable Sitelinks Search Box"
 "Enable Sitelinks Search Box For App","Enable Sitelinks Search Box For App"
 "Error","Error"
 "Error during Save htaccess.txt.","Error during Save htaccess.txt."
 "Error during Save robot.txt.","Error during Save robot.txt."
+"Facebook","Facebook"
 "General","General"
-"In stock","In stock"
+"Google Search Console","Google Search Console"
+"Google+","Google+"
+"Google+ Publisher Page","Google+ Publisher Page"
+"HTML Sitemap","HTML Sitemap"
+"Hreflang Tags","Hreflang Tags"
+"INDEX,FOLLOW","INDEX,FOLLOW"
+"INDEX,NOFOLLOW","INDEX,NOFOLLOW"
 "Include Your Site Name in Search Results","Include Your Site Name in Search Results"
+"Instagram","Instagram"
+"Language","Language"
+"Limit Product Sitemap","Limit Product Sitemap"
+"LinkedIn","LinkedIn"
 "Mageplaza SEO","Mageplaza SEO"
 "Meta Robots","Meta Robots"
-"Out of stock","Out of stock"
-"Page title and Meta Description","Page title and Meta Description"
+"Myspace","Myspace"
+"NOINDEX,FOLLOW","NOINDEX,FOLLOW"
+"NOINDEX,NOFOLLOW","NOINDEX,NOFOLLOW"
+"Pages","Pages"
+"Pinterest","Pinterest"
+"Pinterest Confirmation Code","Pinterest Confirmation Code"
 "Products","Products"
 "Rich Snippets | Structured Data","Rich Snippets | Structured Data"
-"Robots.txt Editor [Beta]","Robots.txt Editor [Beta]"
-"Seo","Seo"
-"Social Media Profiles","Social Media Profiles"
+"SEO","SEO"
+"SEO Dashboard","SEO Dashboard"
+"Sales Phone Number","Sales Phone Number"
+"Social Profiles","Social Profiles"
+"Social Shares","Social Shares"
+"SoundCloud","SoundCloud"
+"Stop Words Package","Stop Words Package"
 "Success","Success"
+"Technical support","Technical support"
+"This is a Notice message.","This is a Notice message."
+"This is a Warning message.","This is a Warning message."
+"This is a success message.","This is a success message."
+"Tumblr","Tumblr"
+"Twitter","Twitter"
 "Twitter Account","Twitter Account"
+"Verifications","Verifications"
+"Website Name","Website Name"
+"X-Default","X-Default"
+"Yandex Webmaster Tools","Yandex Webmaster Tools"
+"YouTube","YouTube"
 "mageplaza","mageplaza"
-"robots.txt Content","robots.txt Content"
