Update label content

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -3,9 +3,10 @@
 " Default URL: http://your-domain.com/seo/sitemap/ ; See <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000155072-html-sitemap" target="_blank">this article</a> "," Default URL: http://your-domain.com/seo/sitemap/ ; See <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000155072-html-sitemap" target="_blank">this article</a> "
 " Default is 100 "," Default is 100 "
 " E.g: <b>com.example</b>"," E.g: <b>com.example</b>"
+" Learn more <a href="https://support.google.com/webmasters/answer/189077?hl=en">Hreflang</a>"," Learn more <a href="https://support.google.com/webmasters/answer/189077?hl=en">Hreflang</a>"
 " "," "
 "Enter verification code, it will be added into <head> tag","Enter verification code, it will be added into <head> tag"
-"Google will only show verified profiles. <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000122359-social-profile-links">Learn more</a>","Google will only show verified profiles. <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000122359-social-profile-links">Learn more</a>"
+"Google will only show verified profiles. <a href="https://developers.google.com/search/docs/data-types/social-profile-links">Learn more</a>","Google will only show verified profiles. <a href="https://developers.google.com/search/docs/data-types/social-profile-links">Learn more</a>"
 "Logo URL, e.g: https://www.mageplaza.com/logo.jpg","Logo URL, e.g: https://www.mageplaza.com/logo.jpg"
 "",""
 "Add Canonical URL Meta","Add Canonical URL Meta"
@@ -14,6 +15,7 @@
 "Add Open Graph meta tags","Add Open Graph meta tags"
 "Add Sitemap Link to Footer","Add Sitemap Link to Footer"
 "Add Twitter Card Meta Tags","Add Twitter Card Meta Tags"
+"Additional Links","Additional Links"
 "Alternate Name","Alternate Name"
 "Android App Code","Android App Code"
 "Avoid duplicate content.","Avoid duplicate content."
@@ -28,9 +30,11 @@
 "Dashboard","Dashboard"
 "Disable URL parameter in canonical URL","Disable URL parameter in canonical URL"
 "Duplicate Content","Duplicate Content"
+"Enable Additional Links","Enable Additional Links"
 "Enable Breadcrumbs Rich Snippet","Enable Breadcrumbs Rich Snippet"
 "Enable Business information","Enable Business information"
 "Enable Categories Sitemap","Enable Categories Sitemap"
+"Enable Exclude Pages Sitemap","Enable Exclude Pages Sitemap"
 "Enable For Category","Enable For Category"
 "Enable For Pages","Enable For Pages"
 "Enable For Product","Enable For Product"
@@ -41,13 +45,14 @@
 "Enable Pages Sitemap","Enable Pages Sitemap"
 "Enable Product Structured Data","Enable Product Structured Data"
 "Enable Products Sitemap","Enable Products Sitemap"
-"Enable Rich Snippets","Enable Rich Snippets"
 "Enable Sitelinks Search Box","Enable Sitelinks Search Box"
 "Enable Sitelinks Search Box For App","Enable Sitelinks Search Box For App"
+"Enable Structured Data","Enable Structured Data"
 "Error","Error"
 "Error during Save htaccess.txt.","Error during Save htaccess.txt."
 "Error during Save robot.txt.","Error during Save robot.txt."
 "Facebook","Facebook"
+"Filter Cms Pages","Filter Cms Pages"
 "General","General"
 "Google Search Console","Google Search Console"
 "Google+","Google+"
@@ -63,6 +68,7 @@
 "LinkedIn","LinkedIn"
 "Mageplaza SEO","Mageplaza SEO"
 "Meta Robots","Meta Robots"
+"More...","More..."
 "Myspace","Myspace"
 "NOINDEX,FOLLOW","NOINDEX,FOLLOW"
 "NOINDEX,NOFOLLOW","NOINDEX,NOFOLLOW"
@@ -70,14 +76,14 @@
 "Pinterest","Pinterest"
 "Pinterest Confirmation Code","Pinterest Confirmation Code"
 "Products","Products"
-"Rich Snippets | Structured Data","Rich Snippets | Structured Data"
 "SEO","SEO"
 "SEO Dashboard","SEO Dashboard"
 "Sales Phone Number","Sales Phone Number"
 "Social Profiles","Social Profiles"
 "Social Shares","Social Shares"
 "SoundCloud","SoundCloud"
-"Stop Words Package","Stop Words Package"
+"Stop Words","Stop Words"
+"Structured Data","Structured Data"
 "Success","Success"
 "Technical support","Technical support"
 "This is a Notice message.","This is a Notice message."
