--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -1,26 +1,33 @@
 "-","-"
 ".","."
-" Default URL: http://your-domain.com/seo/sitemap/ ; See <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000155072-html-sitemap" target="_blank">this article</a> "," Default URL: http://your-domain.com/seo/sitemap/ ; See <a href="https://mageplaza.freshdesk.com/support/solutions/articles/6000155072-html-sitemap" target="_blank">this article</a> "
-" Default is 100 "," Default is 100 "
-" E.g: <b>com.example</b>"," E.g: <b>com.example</b>"
-" Learn more <a href="https://support.google.com/webmasters/answer/189077?hl=en">Hreflang</a>"," Learn more <a href="https://support.google.com/webmasters/answer/189077?hl=en">Hreflang</a>"
-" "," "
-"Enter verification code, it will be added into <head> tag","Enter verification code, it will be added into <head> tag"
-"Google will only show verified profiles. <a href="https://developers.google.com/search/docs/data-types/social-profile-links">Learn more</a>","Google will only show verified profiles. <a href="https://developers.google.com/search/docs/data-types/social-profile-links">Learn more</a>"
+" Add Google+ Page URL."," Add Google+ Page URL."
+" Disable this feature if your theme or module implements it's own product snippets. Learn more "," Disable this feature if your theme or module implements it's own product snippets. Learn more "
+" E.g: com.example"," E.g: com.example"
+" Learn more Breadcrumbs "," Learn more Breadcrumbs "
+" Learn more here "," Learn more here "
+" Learn more Sitelinks Search Box "," Learn more Sitelinks Search Box "
+" Learn more Include Your Site Name in Search Results "," Learn more Include Your Site Name in Search Results "
+" Learn more Rich Snippets "," Learn more Rich Snippets "
+" Learn more Hreflang"," Learn more Hreflang"
+" Pinterest is using Open Graph meta data, same with Facebook. Skip this if your website is verified. Get Pinterest Verification Code"," Pinterest is using Open Graph meta data, same with Facebook. Skip this if your website is verified. Get Pinterest Verification Code"
+" Your account: twitter.com/Mark, you should fill: Mark "," Your account: twitter.com/Mark, you should fill: Mark "
+"Add Open Graph meta tags into head of your website. Facebook, Google+, Pinterest and other social networks use this to fetch data when visitors sharing your website on social networks. Learn more Open Graph ","Add Open Graph meta tags into head of your website. Facebook, Google+, Pinterest and other social networks use this to fetch data when visitors sharing your website on social networks. Learn more Open Graph "
+"Add Twitter Card meta tags into head of your website. Twitter.com uses this to fetch data when visitors sharing your website on Twitter. Learn more Twitter cards ","Add Twitter Card meta tags into head of your website. Twitter.com uses this to fetch data when visitors sharing your website on Twitter. Learn more Twitter cards "
+"Enter verification code, it will be added into  tag","Enter verification code, it will be added into  tag"
+"Google will only show verified profiles. Learn more","Google will only show verified profiles. Learn more"
 "Logo URL, e.g: https://www.mageplaza.com/logo.jpg","Logo URL, e.g: https://www.mageplaza.com/logo.jpg"
-"",""
+"Prefer the https version of a page (a valid ssl certificate is required)","Prefer the https version of a page (a valid ssl certificate is required)"
 "Add Canonical URL Meta","Add Canonical URL Meta"
-"Add Nofollow meta in Product Gallery","Add Nofollow meta in Product Gallery"
 "Add Nofollow meta in Search Result","Add Nofollow meta in Search Result"
 "Add Open Graph meta tags","Add Open Graph meta tags"
-"Add Sitemap Link to Footer","Add Sitemap Link to Footer"
 "Add Twitter Card Meta Tags","Add Twitter Card Meta Tags"
-"Additional Links","Additional Links"
+"Additional links","Additional links"
 "Alternate Name","Alternate Name"
 "Android App Code","Android App Code"
 "Avoid duplicate content.","Avoid duplicate content."
 "Bing Webmaster Tools","Bing Webmaster Tools"
 "Breadcrumbs","Breadcrumbs"
+"Business Description","Business Description"
 "Business Logo","Business Logo"
 "Business Name","Business Name"
 "Business Phone Number","Business Phone Number"
@@ -28,23 +35,15 @@
 "Canonical points to https","Canonical points to https"
 "Categories","Categories"
 "Dashboard","Dashboard"
-"Disable URL parameter in canonical URL","Disable URL parameter in canonical URL"
 "Duplicate Content","Duplicate Content"
-"Enable Additional Links","Enable Additional Links"
 "Enable Breadcrumbs Rich Snippet","Enable Breadcrumbs Rich Snippet"
 "Enable Business information","Enable Business information"
-"Enable Categories Sitemap","Enable Categories Sitemap"
-"Enable Exclude Pages Sitemap","Enable Exclude Pages Sitemap"
 "Enable For Category","Enable For Category"
 "Enable For Pages","Enable For Pages"
 "Enable For Product","Enable For Product"
-"Enable HTML Sitemap","Enable HTML Sitemap"
 "Enable Hreflang Url","Enable Hreflang Url"
-"Enable Next/Prev tag","Enable Next/Prev tag"
 "Enable Organization Information","Enable Organization Information"
-"Enable Pages Sitemap","Enable Pages Sitemap"
 "Enable Product Structured Data","Enable Product Structured Data"
-"Enable Products Sitemap","Enable Products Sitemap"
 "Enable Sitelinks Search Box","Enable Sitelinks Search Box"
 "Enable Sitelinks Search Box For App","Enable Sitelinks Search Box For App"
 "Enable Structured Data","Enable Structured Data"
@@ -52,7 +51,6 @@
 "Error during Save htaccess.txt.","Error during Save htaccess.txt."
 "Error during Save robot.txt.","Error during Save robot.txt."
 "Facebook","Facebook"
-"Filter Cms Pages","Filter Cms Pages"
 "General","General"
 "Google Search Console","Google Search Console"
 "Google+","Google+"
@@ -63,12 +61,11 @@
 "INDEX,NOFOLLOW","INDEX,NOFOLLOW"
 "Include Your Site Name in Search Results","Include Your Site Name in Search Results"
 "Instagram","Instagram"
+"It is useful for generate product, category and page URL key.","It is useful for generate product, category and page URL key."
 "Language","Language"
-"Limit Product Sitemap","Limit Product Sitemap"
 "LinkedIn","LinkedIn"
 "Mageplaza SEO","Mageplaza SEO"
 "Meta Robots","Meta Robots"
-"More...","More..."
 "Myspace","Myspace"
 "NOINDEX,FOLLOW","NOINDEX,FOLLOW"
 "NOINDEX,NOFOLLOW","NOINDEX,NOFOLLOW"
@@ -97,4 +94,3 @@
 "X-Default","X-Default"
 "Yandex Webmaster Tools","Yandex Webmaster Tools"
 "YouTube","YouTube"
-"mageplaza","mageplaza"
