Correct translation of csv file

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -1,96 +1,40 @@
-"-","-"
-".","."
-" Add Google+ Page URL."," Add Google+ Page URL."
-" Disable this feature if your theme or module implements it's own product snippets. Learn more "," Disable this feature if your theme or module implements it's own product snippets. Learn more "
-" E.g: com.example"," E.g: com.example"
-" Learn more Breadcrumbs "," Learn more Breadcrumbs "
-" Learn more here "," Learn more here "
-" Learn more Sitelinks Search Box "," Learn more Sitelinks Search Box "
-" Learn more Include Your Site Name in Search Results "," Learn more Include Your Site Name in Search Results "
-" Learn more Rich Snippets "," Learn more Rich Snippets "
-" Learn more Hreflang"," Learn more Hreflang"
-" Pinterest is using Open Graph meta data, same with Facebook. Skip this if your website is verified. Get Pinterest Verification Code"," Pinterest is using Open Graph meta data, same with Facebook. Skip this if your website is verified. Get Pinterest Verification Code"
-" Your account: twitter.com/Mark, you should fill: Mark "," Your account: twitter.com/Mark, you should fill: Mark "
-"Add Open Graph meta tags into head of your website. Facebook, Google+, Pinterest and other social networks use this to fetch data when visitors sharing your website on social networks. Learn more Open Graph ","Add Open Graph meta tags into head of your website. Facebook, Google+, Pinterest and other social networks use this to fetch data when visitors sharing your website on social networks. Learn more Open Graph "
-"Add Twitter Card meta tags into head of your website. Twitter.com uses this to fetch data when visitors sharing your website on Twitter. Learn more Twitter cards ","Add Twitter Card meta tags into head of your website. Twitter.com uses this to fetch data when visitors sharing your website on Twitter. Learn more Twitter cards "
-"Enter verification code, it will be added into  tag","Enter verification code, it will be added into  tag"
-"Google will only show verified profiles. Learn more","Google will only show verified profiles. Learn more"
-"Logo URL, e.g: https://www.mageplaza.com/logo.jpg","Logo URL, e.g: https://www.mageplaza.com/logo.jpg"
-"Prefer the https version of a page (a valid ssl certificate is required)","Prefer the https version of a page (a valid ssl certificate is required)"
-"Add Canonical URL Meta","Add Canonical URL Meta"
-"Add Nofollow meta in Search Result","Add Nofollow meta in Search Result"
-"Add Open Graph meta tags","Add Open Graph meta tags"
-"Add Twitter Card Meta Tags","Add Twitter Card Meta Tags"
-"Additional links","Additional links"
-"Alternate Name","Alternate Name"
-"Android App Code","Android App Code"
-"Avoid duplicate content.","Avoid duplicate content."
-"Bing Webmaster Tools","Bing Webmaster Tools"
-"Breadcrumbs","Breadcrumbs"
-"Business Description","Business Description"
-"Business Logo","Business Logo"
-"Business Name","Business Name"
-"Business Phone Number","Business Phone Number"
-"Business information","Business information"
-"Canonical points to https","Canonical points to https"
-"Categories","Categories"
-"Dashboard","Dashboard"
+"Check On-page","Check On-page"
+"Can not add structured data","Can not add structured data"
+SEO,SEO
+General,General
+Enable,Enable
 "Duplicate Content","Duplicate Content"
-"Enable Breadcrumbs Rich Snippet","Enable Breadcrumbs Rich Snippet"
-"Enable Business information","Enable Business information"
-"Enable For Category","Enable For Category"
-"Enable For Pages","Enable For Pages"
-"Enable For Product","Enable For Product"
-"Enable Hreflang Url","Enable Hreflang Url"
-"Enable Organization Information","Enable Organization Information"
-"Enable Product Structured Data","Enable Product Structured Data"
-"Enable Sitelinks Search Box","Enable Sitelinks Search Box"
-"Enable Sitelinks Search Box For App","Enable Sitelinks Search Box For App"
-"Enable Structured Data","Enable Structured Data"
-"Error","Error"
-"Error during Save htaccess.txt.","Error during Save htaccess.txt."
-"Error during Save robot.txt.","Error during Save robot.txt."
-"Facebook","Facebook"
-"General","General"
-"Google Search Console","Google Search Console"
-"Google+","Google+"
-"Google+ Publisher Page","Google+ Publisher Page"
-"HTML Sitemap","HTML Sitemap"
-"Hreflang Tags","Hreflang Tags"
-"INDEX,FOLLOW","INDEX,FOLLOW"
-"INDEX,NOFOLLOW","INDEX,NOFOLLOW"
-"Include Your Site Name in Search Results","Include Your Site Name in Search Results"
-"Instagram","Instagram"
-"It is useful for generate product, category and page URL key.","It is useful for generate product, category and page URL key."
-"Language","Language"
-"LinkedIn","LinkedIn"
-"Mageplaza SEO","Mageplaza SEO"
-"Meta Robots","Meta Robots"
-"Myspace","Myspace"
-"NOINDEX,FOLLOW","NOINDEX,FOLLOW"
-"NOINDEX,NOFOLLOW","NOINDEX,NOFOLLOW"
-"Pages","Pages"
-"Pinterest","Pinterest"
-"Pinterest Confirmation Code","Pinterest Confirmation Code"
-"Products","Products"
-"SEO","SEO"
-"SEO Dashboard","SEO Dashboard"
-"Sales Phone Number","Sales Phone Number"
-"Social Profiles","Social Profiles"
-"Social Shares","Social Shares"
-"SoundCloud","SoundCloud"
-"Stop Words","Stop Words"
+"Use Canonical Link Meta Tag For Categories","Use Canonical Link Meta Tag For Categories"
+"Avoid duplicate content.","Avoid duplicate content."
+"Use Canonical Link Meta Tag For Products","Use Canonical Link Meta Tag For Products"
 "Structured Data","Structured Data"
-"Success","Success"
-"Technical support","Technical support"
-"This is a Notice message.","This is a Notice message."
-"This is a Warning message.","This is a Warning message."
-"This is a success message.","This is a success message."
-"Tumblr","Tumblr"
-"Twitter","Twitter"
-"Twitter Account","Twitter Account"
-"Verifications","Verifications"
-"Website Name","Website Name"
-"X-Default","X-Default"
+"Enable Product Structured Data","Enable Product Structured Data"
+"Enable Sitelinks Searchbox","Enable Sitelinks Searchbox"
+"Business information","Business information"
+"Enable Business information","Enable Business information"
+"Business Name","Business Name"
+"Customer Service Phone","Customer Service Phone"
+"Customer Service Contact Option","Customer Service Contact Option"
+"Customer Service Area Serve","Customer Service Area Serve"
+"Technical Support Phone","Technical Support Phone"
+"Technical Support Contact Option","Technical Support Contact Option"
+"Technical Support Area Serve","Technical Support Area Serve"
+"Sales Service Phone","Sales Service Phone"
+"Sales Contact Option","Sales Contact Option"
+"Sales Area Serve","Sales Area Serve"
+"Social Profiles","Social Profiles"
+Facebook,Facebook
+Twitter,Twitter
+Google+,Google+
+Instagram,Instagram
+YouTube,YouTube
+LinkedIn,LinkedIn
+Myspace,Myspace
+Pinterest,Pinterest
+SoundCloud,SoundCloud
+Tumblr,Tumblr
+Verifications,Verifications
+"Google Search Console","Google Search Console"
+"Bing Webmaster Tools","Bing Webmaster Tools"
+"Enter verification code, it will be added into <head> tag","Enter verification code, it will be added into <head> tag"
 "Yandex Webmaster Tools","Yandex Webmaster Tools"
-"YouTube","YouTube"
