--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -1,8 +1,19 @@
 "Check On-page","Check On-page"
+Enable,Enable
+Disable,Disable
+gtin8,gtin8
+gtin13,gtin13
+gtin14,gtin14
+mpn,mpn
+None,None
+"+7 days","+7 days"
+"+30 days","+30 days"
+"+60 days","+60 days"
+"+1 year","+1 year"
+Custom,Custom
 "Can not add structured data","Can not add structured data"
 SEO,SEO
 General,General
-Enable,Enable
 "Duplicate Content","Duplicate Content"
 "Use Canonical Link Meta Tag For Categories","Use Canonical Link Meta Tag For Categories"
 "Avoid duplicate content.","Avoid duplicate content."
@@ -10,6 +21,18 @@ Enable,Enable
 "Structured Data","Structured Data"
 "Enable Product Structured Data","Enable Product Structured Data"
 "Disable this feature if your theme or module implements it's own product snippets. <a href=""https://developers.google.com/search/docs/data-types/products"" target=""_blank"">Learn more</a>","Disable this feature if your theme or module implements it's own product snippets. <a href=""https://developers.google.com/search/docs/data-types/products"" target=""_blank"">Learn more</a>"
+Brand,Brand
+"Default Aggregate Rating Value","Default Aggregate Rating Value"
+"To avoid warning message, you can set default value in case of no Aggregate Rating/Review.","To avoid warning message, you can set default value in case of no Aggregate Rating/Review."
+"Default Rating Value","Default Rating Value"
+"Default Review Count","Default Review Count"
+"Default Review Author","Default Review Author"
+"Default Price Valid Until","Default Price Valid Until"
+"Select Specific Day","Select Specific Day"
+"Model Field Name","Model Field Name"
+"Learn more <a href=""https://schema.org/ProductModel"" target=""_blank"">here</a>","Learn more <a href=""https://schema.org/ProductModel"" target=""_blank"">here</a>"
+"Model Value","Model Value"
+"Recommend field: sku, barcode","Recommend field: sku, barcode"
 "Enable Sitelinks Searchbox","Enable Sitelinks Searchbox"
 "Learn more <a href=""https://developers.google.com/search/docs/data-types/sitelinks-searchbox"" target=""_blank"">here</a>","Learn more <a href=""https://developers.google.com/search/docs/data-types/sitelinks-searchbox"" target=""_blank"">here</a>"
 "Business information","Business information"
